# tf-registry

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: github-app-auth.rs  github-token-auth.rs
examples/lambda/: Cargo.toml  README.md
examples/lambda/src/: main.rs
src/: error.rs  handlers.rs  lib.rs  models.rs
tests/: e2e.rs  integration_tests.rs
tests/e2e/testdata/: provider.tf
