[package]
name = "tf-registry"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/iacabezasbaculima/tf-registry"
repository = "https://github.com/iacabezasbaculima/tf-registry.git"
description = "A high-performance, asynchronous implementation of the Terraform Provider Registry protocol, powered by Tokio and Axum."
documentation = "https://docs.rs/tf-registry"
categories = ["web-programming"]
keywords = ["terraform", "terraform-registry", "terraform-provider"]
authors = ["iacabezasbaculima"]
readme = "README.md"
license = "MIT"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
futures-util = "0.3.31"
http = "1.4.0"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["ring"] }
hyper-util = "0.1.19"
jsonwebtoken = "10.2.0"
octocrab = { version = "0.49.5", default-features = true, features = ["stream"] }
regex = "1.12.2"
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1.0.148"
thiserror = "2.0.17"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["follow-redirect"] }
tracing = "0.1.44"
url = "2.5.7"

[dev-dependencies]
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.22"
wiremock = "0.6.5"
